[tool.poetry]
name = "contrib_counter"
version = "0.1.0"
description = "Simple program to utilise Github GraphQL API to scrape user commits and plot"
authors = ["CristiGuijarro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pandas = "^2.2.3"
plotly = "^5.24.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.3.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
contrib-counter="contrib_counter.count_contribs:main"
